--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 
+
 <h1><%= @user.name%></h1>
 <hr/>
 <%= link_to "Destinations", destinations_path %>
@@ -7,6 +8,6 @@
 </br>
 <%= link_to "Create New Itinerary", new_itinerary_path %>
 </br>
-<%= link_to "View My Itineraries", itineraries_path %>
+<%= link_to "View My Itineraries", user_itineraries_path(@user) %>
 <hr/>
 <%= button_to "Logout", logout_path, method: :delete %>
