--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -1,7 +1,6 @@
-<h1><%= @destination.name %></h1>
+<h1><%= @destination.name %></h1> 
 <hr/>
-<li><%= @destination.city %></li>
-<li><%= @destination.state %></li>
+<li><%= @destination.city %>, <%= @destination.state %></li>
 <li><%= @destination.country %></li>
 <%= image_tag(@destination.picture_link, size: "300x300") %>
 
@@ -9,10 +8,36 @@
 
 <% @destination.events.each do |event|%>
   <li><%= link_to event.name, destination_event_path(@destination,event)%> - Price: <%= event.price%></li>
+  <% if User.find(session[:id]).itineraries.length > 0%>
   <%= form_for @entry do |f|%>
   <%= f.hidden_field :event_id, value: event.id%>
   <%= f.collection_select :itinerary_id, @itineraries, :id, :name %>
   <%= f.date_field :date %>
-  <%= f.submit "Add to that itinerary"%>
+  <%= f.submit "Add to Itinerary"%></br>
+  <%= form_for @itinerary do |f|%>
+    <%= f.label "New Itinerary Name" %>
+    <%= f.text_field :name %>
+    <%= f.hidden_field :user_id, value: session[:id]%>
+    <%= f.fields_for :entries do |f| %>
+        <%= f.hidden_field :event_id, value: event.id%>
+        <%= f.label :date %>
+        <%= f.date_field :date %>
+    <% end %>
+    <%= f.submit "Add to New Itinerary" %>
+    <% end %>
   <%end%>
+  <%else%>
+  <%= form_for @itinerary do |f|%>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.hidden_field :user_id, value: session[:id]%></br>
+    <%= f.label :entry %>
+    <%= f.fields_for :entries do |f| %>
+        <%= f.hidden_field :event_id, value: event.id%></br>
+        <%= f.label :date %></br>
+        <%= f.date_field :date %>
+    <% end %>
+    <%= f.submit "Create New Itinerary" %>
+    <% end %>
+  <% end %>
 <%end%>
