--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Destinations</h1>
 <hr/>
 <% @destinations.each do | destination |%>
-<%= link_to destination.name, destination %>
+<%= link_to destination.name, destination %><br>
 <% end %>
