--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,27 +1,34 @@
-<h1>Destinations</h1>
+<%= button_to "Back to Homepage", user_path(@user), method: :get %>
 
+<h1>Destinations</h1>
+<% if flash[:alert]%>
+  <li style="color: red"><%= flash[:alert]%></li>
+<%end %>
 <hr/>
 <%= form_tag("/destinations", method: "get") do %>
-  <%= label_tag "Country"%>
-  <%= select_tag "country", options_for_select(@countries), include_blank: true %>   
   <%= label_tag "State"%>
-  <%= select_tag "state", options_for_select(@states), include_blank: true %>    
-  <%= label_tag "City"%> 
-  <%= select_tag "city", options_for_select(@cities), include_blank: true %>    
+  <%= select_tag "state", option_groups_from_collection_for_select(@countries, :states, :name, :id, :name), include_blank: true %>   
+  <%= label_tag "City"%>
+  <%= select_tag "city", option_groups_from_collection_for_select(@states, :cities, :name, :id, :name), include_blank: true %>   
   <%= submit_tag "Filter" %>
   <% end %>
 </br>
 <%= form_tag("/destinations", method: "get") do %>
-    <%= label_tag "Most Popular"%>
-    <%= select_tag "popularity", options_for_select(["Popularity", "Rating"]), include_blank: true %>     
+    <%= label_tag "Sort by: "%>
+    <%= select_tag "category", options_for_select(["Popularity", "Rating high to low", "Rating low to high"]), include_blank: true %>     
     <%= label_tag "Limit" %>
     <%= select_tag "limit", options_for_select([1, 10, 25, 50]), include_blank: true %>     
-    <%= submit_tag "Filter" %>
+    <%= submit_tag "Sort" %>
     <% end %>
  
-
-<% @destinations.each do | destination |%>
-<%= link_to destination.name, destination %><br>
+<% if @a_destinations%>
+  <% @a_destinations.each do |destination|%>
+    <li><%= link_to destination[0].name, destination[0] %> -  <%= destination[1]%></li><br>
+  <%end%>
+<%else%>
+  <% @destinations.sort_by(&:name).each do | destination |%>
+  <li><%= link_to destination.name, destination %></li><br>
+  <%end%>
 <% end %>
 
 <hr/>
