--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -1,3 +1,5 @@
+<%= button_to "Back", destinations_path, method: :get %>
+
 <h1><%= @destination.name %></h1> 
 <hr/>
 <% if !User.find(session[:id]).favorites.any? {|favorite| favorite.destination == @destination }%>
@@ -7,8 +9,8 @@
     <%= f.submit "Add to Favorites"%>
 <% end %>
 <% end %>
-<li><%= @destination.city %>, <%= @destination.state %></li>
-<li><%= @destination.country %></li>
+<li><%= @destination.city.name %>, <%= @destination.state.name %></li>
+<li><%= @destination.country.name %></li>
 <%= image_tag(@destination.picture_link, size: "300x300") %>
 
 <h3> All events</h3>
