added ability for users to edit and delete reviews

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,6 @@
 </br>
 <%= link_to "My Itineraries", user_itineraries_path(@user) %>
 </br>
-<%= link_to "My Reviews" %>
+<%= link_to "My Reviews", user_reviews_path(@user) %>
 <hr/>
 <%= button_to "Logout", logout_path, method: :delete %>
