--- a/app/views/itineraries/archived.html.erb
+++ b/app/views/itineraries/archived.html.erb
@@ -4,5 +4,5 @@
     <li><%= link_to itinerary.name, user_itinerary_path(itinerary.user, itinerary)%></li>
 <% end %>
 <hr/>
-<%= link_to "Back to Homepage", user_path(session[:id]), method: :get %>
+<%= button_to "Back to Homepage", user_path(session[:id]), method: :get %>
 </br>
