--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -21,6 +21,8 @@
 <%end%>
 </br>
 <%= button_to "Add Destinations", destinations_path, method: :get %> 
+<hr/>
+<%= button_to "Edit Itinerary", edit_itinerary_path(@itinerary), method: :get %>
 </br>
 <%= button_to "Archive Itinerary", update_itinerary_path(@itinerary), method: :put %>
 <hr/>
