--- a/app/views/layouts/nav_page.html.erb
+++ b/app/views/layouts/nav_page.html.erb
@@ -21,7 +21,7 @@
     <!-- Styles -->
        
 	<!-- Favicon  -->
-    <link rel="icon" href="/assets/favicon.png">
+    <link rel="icon" href="/assets/logo.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
