--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -36,21 +36,6 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/">HOME <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/destinations">DESTINATIONS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/itineraries" >ITINERARIES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll">REVIEWS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/favorites">FAVORITES</a>
-                </li>
 
                 <% if session[:id]%>
                 <li class="nav-item">
@@ -74,9 +59,8 @@
         <div class="header-content">
             <div class="container">
                         <div class="text-container">
-                            <h1> <span id="js-rotating">Plan less Travel more, Ready for an adventure</span></h1>
-                            <p class="p-heading p-large">Travel app is a free app made by Kirsty Brewster and Chi Nguyen from Flatiron School</p>
-                            <a class="btn-solid-lg page-scroll" href="/destinations">DISCOVER</a>
+                            <h1> <span id="js-rotating">Ready for an adventure</span></h1>
+                            <p class="p-heading p-large">KC Travel app is a free app made by Kirsty Brewster and Chi Nguyen from Flatiron School</p>
                         </div>
             </div> <!-- end of container -->
         </div> <!-- end of header-content -->
