--- a/app/views/layouts/nav_page.html.erb
+++ b/app/views/layouts/nav_page.html.erb
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/">HOME <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="/users/<%= session[:id]%>/welcome">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="/destinations">DESTINATIONS</a>
