--- a/app/views/layouts/welcome_page.html.erb
+++ b/app/views/layouts/welcome_page.html.erb
@@ -18,27 +18,25 @@
     <title>Travel App</title>
 
     <!-- Styles -->
-       
+    
+   
 	<!-- Favicon  -->
     <link rel="icon" href="/assets/logo.png">
 </head>
-<body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
         <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
+        <a class="navbar-brand logo-text page-scroll" style="color: #009879">KC TRAVEL</a>
 
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html">Travel App</a>
-        <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
+        <%# <a class="navbar-brand logo-image" href="index.html"><img src="/assets/logo.png" alt="alternative"></a> %>
         
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/users/<%= session[:id]%>/welcome">HOME <span class="sr-only">(current)</span></a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="/destinations">DESTINATIONS</a>
                 </li>
@@ -46,7 +44,7 @@
                     <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/itineraries" >ITINERARIES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/reviews">REVIEWS</a>
+                    <a class="nav-link page-scroll">REVIEWS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/favorites">FAVORITES</a>
@@ -54,7 +52,7 @@
 
                 <% if session[:id]%>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>">Hi, <%= User.find(session[:id]).name%></a>
+                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>">MY ACCOUNT</a>
                 </li>
                 <%else%>
                 <li class="nav-item">
@@ -63,29 +61,34 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="/login">LOG IN</a>
                 </li>
-
                 <%end%>
             </ul>
         </div>
     </nav> <!-- end of navbar -->
     <!-- end of navbar -->
-      <header id="header" class="header">
-      <!-- Header -->
+
+    <!-- Header -->
+    <header id="header" class="header">
         <div class="header-content">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
                         <div class="text-container">
-                            <%= yield %>
+                            <h1> <span id="js-rotating">Hi, <%= User.find(session[:id]).name%></span></h1>
+                            <br>
+                            <a class="btn-solid-lg page-scroll" href="/destinations/<%= Destination.all[rand(1..300)].id%>">DISCOVER</a>
                         </div>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
             </div> <!-- end of container -->
         </div> <!-- end of header-content -->
     </header> <!-- end of header -->
     <!-- end of header -->
-  </body>
+
+    	
+    <!-- Scripts -->
+
+</body>
 </html>
+
+
+<%= yield %>
 
 <div class="copyright">
     <div class="container">
@@ -96,3 +99,5 @@
         </div> <!-- enf of row -->
     </div> <!-- end of container -->
 </div>
+
+ <script src="jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
