--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,10 @@
 
 
 <h1><%= @user.name%></h1>
-<hr/>
-<%= link_to "Destinations", destinations_path %>
-</br>
-<%= link_to "My Favorites", favorites_path %>
-</br>
-<%= link_to "My Itineraries", user_itineraries_path(@user) %>
-</br>
-<%= link_to "My Reviews", user_reviews_path(@user) %>
-<hr/>
+
+<h2>Age: <%= @user.age%></h2>
+<h2>Email: <%= @user.email%></h2>
+
+<br>
+
 <%= button_to "Logout", logout_path, method: :delete %>
