--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -30,7 +30,7 @@
         <a class="navbar-brand logo-text page-scroll" style="color: #009879">KC TRAVEL</a>
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html">Travel App</a>
+        <%# <a class="navbar-brand logo-image" href="index.html">Travel App</a> %>
         <%# <a class="navbar-brand logo-image" href="index.html"><img src="/assets/logo.png" alt="alternative"></a> %>
         
 
