--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <% if flash[:errors]%>
   <% flash[:errors].each do |error|%>
-  <li style="color: red"><%= error%></li>
+  <h6 style="color: red"><%= error%></h6>
   <%end%>
 <%end %>
 
