--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -19,7 +19,7 @@
     <%end%>
   <%end%>
 <%end%>
-</br>
+<br>
 <%= button_to "Archive this Itinerary", update_itinerary_path(@itinerary), method: :put %>
 <hr/>
 <% else %>
@@ -27,13 +27,13 @@
 <% destinations = []%>
 <% entries.each { |entry| destinations << entry.event.destination} %>
 <% destinations.uniq.each do |d|%>
-  <%= d.name%>
+  <h2><%= d.name%></h2>
   <% @itinerary.entries.order(:date).each do |entry|%>
     <% if Event.find(entry.event_id).destination_id == d.id%>
       <% if entry.visited == false %>
-        <li type="square", style="font-style: italic"><%= entry.event.name%> on <%= entry.date.strftime("%A %B %d, %Y")%></li>
+        <h4 type="square", style="font-style: italic"><%= entry.event.name%> on <%= entry.date.strftime("%A %B %d, %Y")%></h4>
       <%else%> 
-         <li type="square", style="font-style: italic"><del><%= entry.event.name%> on <%= entry.date.strftime("%A %B %d, %Y")%></li>
+         <h4 type="square", style="font-style: italic"><del><%= entry.event.name%> on <%= entry.date.strftime("%A %B %d, %Y")%></h4>
       <%end%>
     <%end%>
   <%end%>
