--- a/app/views/layouts/filter_page.html.erb
+++ b/app/views/layouts/filter_page.html.erb
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
         <!-- Text Logo - Use this if you don't have a graphic logo -->
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
-
+<a class="navbar-brand logo-text page-scroll" style="color: #009879">KC TRAVEL</a>
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html">Travel App</a>
         <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
