--- a/app/views/layouts/nav_page.html.erb
+++ b/app/views/layouts/nav_page.html.erb
@@ -27,6 +27,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
+    <a class="navbar-brand logo-text page-scroll" style="color: #009879">KC TRAVEL</a>
         <!-- Text Logo - Use this if you don't have a graphic logo -->
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
