--- a/app/views/layouts/welcome_page.html.erb
+++ b/app/views/layouts/welcome_page.html.erb
@@ -44,7 +44,7 @@
                     <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/itineraries" >ITINERARIES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll">REVIEWS</a>
+                    <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/reviews">REVIEWS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href = "/users/<%= session[:id]%>/favorites">FAVORITES</a>
@@ -74,7 +74,7 @@
                         <div class="text-container">
                             <h1> <span id="js-rotating">Hi, <%= User.find(session[:id]).name%></span></h1>
                             <br>
-                            <a class="btn-solid-lg page-scroll" href="/destinations/<%= Destination.all[rand(1..300)].id%>">DISCOVER</a>
+                            <a class="btn-solid-lg page-scroll" href="/destinations/<%= Destination.all[rand(1..190)].id%>">DISCOVER</a>
                         </div>
             </div> <!-- end of container -->
         </div> <!-- end of header-content -->
